Form on login page

--- a/angular-blog/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/angular-blog/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar bg-primary">
     <h1 routerLink="/">Blog Admin</h1>
     <ul>
-        <li>
+        <li routerLinkActive="active">
             <a [routerLink]="['/admin', 'dashboard']">Main</a>
         </li>
-        <li>
+        <li routerLinkActive="active">
             <a [routerLink]="['/admin', 'create']">Create</a>
         </li>
         <li>
