--- a/angular-blog/src/app/admin/views/login-page/login-page.component.html
+++ b/angular-blog/src/app/admin/views/login-page/login-page.component.html
@@ -24,7 +24,7 @@
     <button 
         type="submit" 
         class="btn btn-primary"
-        [disabled] = "form.invalid">
+        [disabled] = "form.invalid || isWaiting">
         Submit
     </button>
 </form>
