--- a/angular-blog/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/angular-blog/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar bg-primary">
     <h1 routerLink="/">Blog Admin</h1>
-    <a  (click)="getUsers()">Get Users</a>
+    <!-- <a  (click)="getUsers()">Get Users</a> -->
     <ul *ngIf="showMenu">
         <li routerLinkActive="active">
             <a [routerLink]="['/admin', 'dashboard']">Main</a>
