--- a/angular-blog/src/app/admin/views/edit-page/edit-page.component.html
+++ b/angular-blog/src/app/admin/views/edit-page/edit-page.component.html
@@ -1,1 +1,26 @@
-<p>edit-page works!</p>
+<div *ngIf="form;else loading">
+    <form (submit)="submit()" [formGroup]="form">
+        <h1>Edit Post</h1>
+        <div class="form-control" [ngClass]="{invalid: isInvalid('title')}">
+          <label for="title">Title:</label>
+          <input type="text" id="title" formControlName="title" >
+          <div class="validation" *ngIf="isInvalid('title')">
+            <small *ngIf="isEmpty('title')">Enter post title</small>
+          </div>
+        </div>
+        <div class="form-control" [ngClass]="{invalid: isInvalid('content')}">
+          <label for="content">Content:</label>
+          <quill-editor formControlName="content"></quill-editor>
+          <div class="validation" *ngIf="isInvalid('content')">
+            <small *ngIf="isEmpty('content')">Enter post content</small>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary" [disabled] = "form.invalid || isWaiting">
+            Update
+          </button>
+    </form>
+</div>
+
+<ng-template #loading>
+    <p class="text-center">Loading...</p>
+</ng-template>
