Add alert component and service

--- a/angular-blog/src/styles.scss
+++ b/angular-blog/src/styles.scss
@@ -8,6 +8,7 @@
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
   --success-color: #28a745;
+  --warning_color: yellow; 
 }
 
 * {
@@ -143,8 +144,13 @@ img {
 .alert {
   padding: 0.7rem;
   margin: 1rem 0;
-  opacity: 0.9;
+  opacity: 1.0;
   background: var(--light-color);
+  color: #333;
+}
+
+.alert-warning{
+  background: var(--warning_color);
   color: #333;
 }
 
