--- a/angular-blog/src/app/admin/shared/components/alert/alert.component.html
+++ b/angular-blog/src/app/admin/shared/components/alert/alert.component.html
@@ -1,5 +1,5 @@
-<div class="alert-wrapper" *ngIf="alert">
-    <div [ngClass]="class">
+<div *ngIf="alert">
+  <div [ngClass]="class">
     <p>{{alert.text}}</p>
   </div>
 </div>
