--- a/angular-blog/src/app/shared/components/main-layout/main-layout.component.html
+++ b/angular-blog/src/app/shared/components/main-layout/main-layout.component.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar main">
-    <h1>Best Blog Ever</h1>
-    <a routerLink="/admin" style="color:black">Admin</a>
+    <h1>Best Blog Ever :)</h1>
+    <a routerLink="/admin" style="color:black">Sign In</a>
 </nav>
 
 <div class="container">
