--- a/angular-blog/src/app/admin/shared/components/alert/alert.component.css
+++ b/angular-blog/src/app/admin/shared/components/alert/alert.component.css
@@ -1,9 +1,13 @@
 .alert{
     position: fixed;
     top: 0px;
-    left: 45%;
-    max-width: 200px;
+    left: 50%;
+    max-width: 800px;
     border: solid 1px var(--dark-color);
     border-radius: 3px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
+    padding: 10px 30px 10px 30px;
+    -ms-transform: translate(-50%, 0%);
+    transform: translate(-50%, 0%);
+    z-index: 2;
 }
