--- a/angular-blog/src/app/shared/components/post/post.component.html
+++ b/angular-blog/src/app/shared/components/post/post.component.html
@@ -1,10 +1,13 @@
 <div class="card">
     <div class="card-header">
-        <h2>Post Title</h2>
-        <small>05/07/2020</small>
+        <small>Author: {{post.author}}</small>
+        <small>Published: {{post.date | date:'dd.MM.yyyy'}}</small>
     </div>
     <div>
-        <small>Author Name</small>
+        <h2>{{post.title}}</h2>
     </div>
-    <button [routerLink]="['/post', 123]" class="btn btn-dark">Open</button>
+    <div class="content_preview">
+        <quill-view [content]="post.preview + '...'" format="text"></quill-view>
+    </div>
+    <button [routerLink]="['/post', post.id]" class="btn btn-dark">Read more</button>
 </div>
