--- a/angular-blog/src/app/views/post-page/post-page.component.html
+++ b/angular-blog/src/app/views/post-page/post-page.component.html
@@ -1,16 +1,18 @@
-
-<div class="post">
-    <div class="header">
-        <h1>Post Title</h1>
-        <button class="btn btn-link" routerLink="/" >Back</button>
-    </div>
-    <div class="info">
-        <strong>Author</strong>
-        <small>05/07/2020</small>
-    </div>
-    <div>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident blanditiis quae fugit necessitatibus cum itaque maxime magnam reiciendis doloremque suscipit. Amet praesentium, incidunt minima natus rem fuga sint odio quisquam omnis consequuntur facilis fugit culpa fugiat eum tempora harum ab. Soluta enim dolor ea sapiente, voluptatibus dicta perferendis eum beatae inventore tempora vitae fugiat, adipisci laborum, vero rerum qui quod quia quam exercitationem. Laudantium, voluptate? Sapiente deleniti earum qui voluptas, facere reprehenderit laudantium fugiat molestias repudiandae consequuntur tempore itaque, animi nihil. Ab libero ipsum, impedit aspernatur culpa quibusdam rem repellendus magni enim dolor excepturi tenetur similique quod et sint obcaecati? Perferendis nam quo quidem similique laborum, eligendi est repellat nesciunt laudantium alias voluptas laboriosam enim non quam ullam, quibusdam accusantium et consequuntur dignissimos aut architecto! Quidem maiores recusandae delectus, dolor, eligendi officiis beatae cumque architecto, odit cupiditate doloremque illo molestiae maxime ipsum impedit repellat blanditiis. Nostrum aliquid itaque fugiat qui.
-        </p>
+<div *ngIf="post$ | async as post; else loading">
+    <div class="post">
+        <div class="header">
+            <h1>{{post.title}}</h1>
+            <button class="btn btn-link" routerLink="/">Back</button>
+        </div>
+        <div class="info">
+            <strong>{{post.author}}</strong>
+            <small>{{post.date | date:'dd.MM.yyyy'}}</small>
+        </div>
+        <div>
+            <quill-view-html [content]="post.content"></quill-view-html>
+        </div>
     </div>
 </div>
+<ng-template #loading>
+    <p>Loading...</p>
+</ng-template>
